--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,36 +1,34 @@
-name: Python CI
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+
+name: Python application
 
 on:
   push:
-    branches:
-      - main  # Adjust the branch name as needed
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x  # Choose your desired Python version
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install project dependencies
-
-      - name: Install curl
-        run: sudo apt-get install curl  # Install curl
-
-      - name: Send GET Request to Flask App
-        run: |
-          response=$(curl http://localhost:5000)  # Adjust the URL as needed
-          echo "Response from Flask App: $response"
-
-      - name: Display Response
-        run: |
-          echo "Response from Flask App: $response"
+    - name: Test with app.py
+      run: |
+        python app.py
